--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
     <!-- PROJECT 4 : RIYA (PORTRAIT) -->
     <!-- ================================================= -->
     <div class="portfolio-card reel-portrait cursor-pointer"
-         onclick="openVideo('riya_xadhgy','portrait')">
+         onclick="openVideo('1024_pi9phv','portrait')">
 
       <img
         src="https://res.cloudinary.com/dcqktwoqz/image/upload/v1766067496/riya_jnvbzj.jpg"
@@ -129,3 +129,4 @@
 <script>feather.replace()</script>
 </body>
 </html>
+
