Revise portfolio project details and images
Updated project thumbnails and video identifiers for better organization.

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,11 +30,11 @@
     <!-- PROJECT 1 : YAMINI (LANDSCAPE) -->
     <!-- ================================================= -->
     <div class="portfolio-card reel-landscape cursor-pointer"
-         onclick="openVideo('yamini_ssvjao','landscape')">
+         onclick="openVideo('yamini_xcjarb','landscape')">
 
       <!-- THUMBNAIL IMAGE -->
       <img
-        src="https://res.cloudinary.com/dcqktwoqz/image/upload/v1766067499/video1_kckelc.jpg"
+        src="https://res.cloudinary.com/dcqktwoqz/image/upload/v1766123995/video1_dbq7hz.jpg"
         class="w-full h-full object-cover"
         alt="Yamini Project">
     </div>
@@ -43,10 +43,10 @@
     <!-- PROJECT 2 : THALA (LANDSCAPE) -->
     <!-- ================================================= -->
     <div class="portfolio-card reel-landscape cursor-pointer"
-         onclick="openVideo('thala_heye9q','landscape')">
+         onclick="openVideo('thala_itw8fe','landscape')">
 
       <img
-        src="https://res.cloudinary.com/dcqktwoqz/image/upload/v1766067497/video2_vdj1mx.jpg"
+        src="https://res.cloudinary.com/dcqktwoqz/image/upload/v1766123994/video2_mnsdsi.jpg"
         class="w-full h-full object-cover"
         alt="Thala Project">
     </div>
@@ -55,10 +55,10 @@
     <!-- PROJECT 3 : VANDE (LANDSCAPE) -->
     <!-- ================================================= -->
     <div class="portfolio-card reel-landscape cursor-pointer"
-         onclick="openVideo('vande_kp8wd4','landscape')">
+         onclick="openVideo('vande_kuzstx','landscape')">
 
       <img
-        src="https://res.cloudinary.com/dcqktwoqz/image/upload/v1766067497/video3_t3mmeb.jpg"
+        src="https://res.cloudinary.com/dcqktwoqz/image/upload/v1766123995/video3_crkzkz.jpg"
         class="w-full h-full object-cover"
         alt="Vande Project">
     </div>
@@ -67,10 +67,10 @@
     <!-- PROJECT 4 : RIYA (PORTRAIT) -->
     <!-- ================================================= -->
     <div class="portfolio-card reel-portrait cursor-pointer"
-         onclick="openVideo('1024_pi9phv','portrait')">
+         onclick="openVideo('riya_trnv1n','portrait')">
 
       <img
-        src="https://res.cloudinary.com/dcqktwoqz/image/upload/v1766067496/riya_jnvbzj.jpg"
+        src="https://res.cloudinary.com/dcqktwoqz/image/upload/v1766123990/riya_calin0.jpg"
         class="w-full h-full object-cover"
         alt="Riya Project">
     </div>
@@ -79,24 +79,120 @@
     <!-- PROJECT 5 : ADI (PORTRAIT) -->
     <!-- ================================================= -->
     <div class="portfolio-card reel-portrait cursor-pointer"
-         onclick="openVideo('adi_wwodvj','portrait')">
+         onclick="openVideo('adi_mirpmu','portrait')">
 
       <img
-        src="https://res.cloudinary.com/dcqktwoqz/image/upload/v1766067495/adi_anxtba.jpg"
+        src="https://res.cloudinary.com/dcqktwoqz/image/upload/v1766123991/adi_hjjhbb.jpg"
         class="w-full h-full object-cover"
         alt="Adi Project">
     </div>
 
     <!-- ================================================= -->
-    <!-- PROJECT 6 : CHIKU (LANDSCAPE) -->
+    <!-- PROJECT 6 : RAJ (PORTRAIT) -->
     <!-- ================================================= -->
-    <div class="portfolio-card reel-landscape cursor-pointer"
-         onclick="openVideo('chiku_ss1qas','landscape')">
+    <div class="portfolio-card reel-portrait cursor-pointer"
+         onclick="openVideo('raj_x60jox','portrait')">
 
       <img
-        src="https://res.cloudinary.com/dcqktwoqz/image/upload/v1766067496/chiku_ylpkmv.jpg"
+        src="https://res.cloudinary.com/dcqktwoqz/image/upload/v1766123990/raj_ky932s.jpg"
+        class="w-full h-full object-cover"
+        alt="Raj Project">
+    </div>
+
+    <!-- ================================================= -->
+    <!-- PROJECT 7 : LAPTOP (PORTRAIT) -->
+    <!-- ================================================= -->
+    <div class="portfolio-card reel-portrait cursor-pointer"
+         onclick="openVideo('laptop_wqafci','portrait')">
+
+      <img
+        src="https://res.cloudinary.com/dcqktwoqz/image/upload/v1766123991/laptop_gcf0jv.jpg"
+        class="w-full h-full object-cover"
+        alt="Laptop Project">
+    </div>
+
+    <!-- ================================================= -->
+    <!-- PROJECT 8 : RAFTING (PORTRAIT) -->
+    <!-- ================================================= -->
+    <div class="portfolio-card reel-portrait cursor-pointer"
+         onclick="openVideo('rafting_rftzcl','portrait')">
+
+      <img
+        src="https://res.cloudinary.com/dcqktwoqz/image/upload/v1766123992/rafting_wunwis.jpg"
+        class="w-full h-full object-cover"
+        alt="Rafting Project">
+    </div>
+
+    <!-- ================================================= -->
+    <!-- PROJECT 9 : NAINITAL (PORTRAIT) -->
+    <!-- ================================================= -->
+    <div class="portfolio-card reel-portrait cursor-pointer"
+         onclick="openVideo('nainital_pj3dxb','portrait')">
+
+      <img
+        src="https://res.cloudinary.com/dcqktwoqz/image/upload/v1766123991/nainital_odlc8u.jpg"
+        class="w-full h-full object-cover"
+        alt="Nainital Project">
+    </div>
+
+    <!-- ================================================= -->
+    <!-- PROJECT 10 : CHIKU (LANDSCAPE) -->
+    <!-- ================================================= -->
+    <div class="portfolio-card reel-landscape cursor-pointer"
+         onclick="openVideo('chiku_jvogb7','landscape')">
+
+      <img
+        src="https://res.cloudinary.com/dcqktwoqz/image/upload/v1766123991/chiku_zjfd16.jpg"
         class="w-full h-full object-cover"
         alt="Chiku Project">
+    </div>
+
+    <!-- ================================================= -->
+    <!-- PROJECT 11 : JANESHWAR (LANDSCAPE) -->
+    <!-- ================================================= -->
+    <div class="portfolio-card reel-landscape cursor-pointer"
+         onclick="openVideo('janeshwar_skenwg','landscape')">
+
+      <img
+        src="https://res.cloudinary.com/dcqktwoqz/image/upload/v1766123989/janeshwar_sqvcd4.jpg"
+        class="w-full h-full object-cover"
+        alt="Janeshwar Project">
+    </div>
+
+    <!-- ================================================= -->
+    <!-- PROJECT 12 : GANVKATHA (LANDSCAPE) -->
+    <!-- ================================================= -->
+    <div class="portfolio-card reel-landscape cursor-pointer"
+         onclick="openVideo('gaanvkatha_vv6zri','landscape')">
+
+      <img
+        src="https://res.cloudinary.com/dcqktwoqz/image/upload/v1766125692/gaanvkatha_cyhmvw.jpg"
+        class="w-full h-full object-cover"
+        alt="Gaanvkatha Project">
+    </div>
+
+    <!-- ================================================= -->
+    <!-- PROJECT 13 : VISARJAN (PORTRAIT) -->
+    <!-- ================================================= -->
+    <div class="portfolio-card reel-portrait cursor-pointer"
+         onclick="openVideo('visarjan_u37syh','portrait')">
+
+      <img
+        src="https://res.cloudinary.com/dcqktwoqz/image/upload/v1766123990/visarjan_croce6.jpg"
+        class="w-full h-full object-cover"
+        alt="Visarjan Project">
+    </div>
+
+    <!-- ================================================= -->
+    <!-- PROJECT 12 : GODL (LANDSCAPE) -->
+    <!-- ================================================= -->
+    <div class="portfolio-card reel-landscape cursor-pointer"
+         onclick="openVideo('godl_ypljjv','landscape')">
+
+      <img
+        src="https://res.cloudinary.com/dcqktwoqz/image/upload/v1766123992/godl_urnt6f.jpg"
+        class="w-full h-full object-cover"
+        alt="Godl Project">
     </div>
 
   </div>
@@ -129,4 +225,3 @@
 <script>feather.replace()</script>
 </body>
 </html>
-
