Add 'Voting' project to portfolio
Added a new project 'Voting' to the portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -195,6 +195,18 @@
         alt="Godl Project">
     </div>
 
+    <!-- ================================================= -->
+    <!-- PROJECT 13 : VOTING (PORTRAIT) -->
+    <!-- ================================================= -->
+    <div class="portfolio-card reel-portrait cursor-pointer"
+         onclick="openVideo('Final_1_ciwgbp','portrait')">
+
+      <img
+        src="https://res.cloudinary.com/dcqktwoqz/image/upload/v1766830016/vlcsnap-2025-12-27-15h36m02s956_zpdmyo.png"
+        class="w-full h-full object-cover"
+        alt="Voting Project">
+    </div>
+
   </div>
 </main>
 
@@ -225,3 +237,4 @@
 <script>feather.replace()</script>
 </body>
 </html>
+
