Add 'Lenskart' project to portfolio
Added a new project 'Lenskart' to the portfolio section.

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,6 +40,18 @@
     </div>
 
     <!-- ================================================= -->
+    <!-- PROJECT 14 : LENSKART (PORTRAIT) -->
+    <!-- ================================================= -->
+    <div class="portfolio-card reel-portrait cursor-pointer"
+         onclick="openVideo('Compressed_sbmvjq','portrait')">
+
+      <img
+        src="https://res.cloudinary.com/dcqktwoqz/image/upload/v1767950812/vlcsnap-2026-01-09-14h56m23s362_rvhvqz.png"
+        class="w-full h-full object-cover"
+        alt="Voting Project">
+    </div>
+
+    <!-- ================================================= -->
     <!-- PROJECT 2 : THALA (LANDSCAPE) -->
     <!-- ================================================= -->
     <div class="portfolio-card reel-landscape cursor-pointer"
@@ -237,4 +249,5 @@
 <script>feather.replace()</script>
 </body>
 </html>
+
 
